Fix: add banner and remove menu on small devices

--- a/styles.css
+++ b/styles.css
@@ -51,6 +51,10 @@ body{
     transform: scale(1.05);
     background-color: #4338ca;
 }
+.banner{
+    background-image: url('/img/banner.png');
+    background-size: cover;
+}
 @media (max-width: 768px) {
     .container {
         max-width: 100%;
